# tigris_board

./: assets.py  board.py  config.py  drawing.py  game_logic.py  game_objects.py  main.py  pyproject.toml  temple.xcf  temple_with_treasure.xcf  tigrisrule.rtf  ui.py
